<resources>

    <string name="app_name">decisive-wizard</string>
    <string name="app_desc">Add a more precise desc plz</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_last_rolls">Last rolls</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contribute_title">Contribute</string>
    <string name="nav_share">Share</string>
    <string name="nav_pay_us_a_beer">Pay us a beer !</string>
    <!-- Navigation Drawer -->

    <!-- Home Fragment -->
    <string name="roll_button">Roll</string>
    <string name="last_roll_button">Last\nRoll</string>
    <string name="result_title">The roll is</string>
    <!-- Home Fragment -->

    <string name="about_text">
        <b>Image credits</b>\n
        \"Ready to Roll\" — Benjamin Esham\n
        <a href="https://www.flickr.com/photos/bdesham">Flickr</a> // CC BY-SA 2.0\n\n
        <b>Developers</b>\n
        <a href="tonurlgros">Alberto Hugo</a>
        <a href="http://feula.gitlab.io">Florian Eula</a>\n
    </string>

</resources>
